--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "Sistema de adopcion de mascotas",
   "dependencies": {
+    "adoptionsystem": "file:",
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
